--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Page d'accueil</h1>
+    
+    <div class="onClick box1">
+        <h4>Texte</h4>
+        <button id="btn1">Lorem.</button>
+        <button id="btn2">Lorem.</button>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptate est deleniti, voluptatum, ab eum corporis ipsum reprehenderit asperiores consectetur assumenda. Eveniet dolore quos modi natus ratione, aperiam animi! Veritatis!</p>
+    </div>
+
 <script src="index.js"></script>
 </body>
 </html>
